# euchre

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gtest.cmake
src/: card.cpp  card.hpp  cardmanager.cpp  cardmanager.hpp  hand.cpp  hand.hpp  handcompare.cpp  handcompare.hpp  main.cpp
tests/: main.cpp
